infrastructure/kyverno/tests/validating_require-requests-limits/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-resources-limits
  namespace: tenant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-without-resources-limits
  namespace: tenant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-deployment-without-resources-limits
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:latest
