infrastructure/kyverno/tests/validating_require-requests-limits/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: image-version-validation
policies:
  - ../../policies/validating_require-tenant-requests-limits.yaml
resources:
  - deployment.yaml
values:
  namespaces:
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: tenant
        labels:
          toolkit.fluxcd.io/tenant: "my-team"
results:
  - isValidatingPolicy: true
    kind: Deployment
    policy: require-tenant-requests-limits
    resources:
      - deployment-with-resources-limits
    result: pass
  - isValidatingPolicy: true
    kind: Deployment
    policy: require-tenant-requests-limits
    resources:
      - deployment-without-resources-limits
    result: fail
  - isValidatingPolicy: true
    kind: Deployment
    policy: require-tenant-requests-limits
    resources:
      - system-deployment-without-resources-limits
    result: skip
